[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-ai-sdk"
version = "1.28.2"
description = "Python SDK for Causal AI MVP Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fujitsu TSU MVPE Engineering Team"},
]
dependencies = [
    "httpx",
    "openpyxl",
    "pandas",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["causal_ai_sdk*"]
exclude = ["causal_ai_sdk.tests*"]
